put nips paper almost on 8 pages, fix some typos, and add some comments

--- a/ICMLPhysicsWorkshop/dnns.bib
+++ b/ICMLPhysicsWorkshop/dnns.bib
@@ -1,13 +1,47 @@
-@MISC{weightwatcher_package,
-  title =        {{WeightWatcher}},
-  note =         {\texttt{https://pypi.org/project/WeightWatcher/}},
+@MISC{talk_michael_acmsfsig_2019,
+  author =       {M. W. Mahoney},
+  title =        {Seminar at ACM SF-SIG},
+  year =         {February 2019},
+  note =         {\url{https://www.youtube.com/watch?v=2qF8TezRwS0}},
 }
 
-@MISC{weightwatcher_package_justURL,
-  note =         {\texttt{https://pypi.org/project/WeightWatcher/}},
+@MISC{talk_michael_simons_2018,
+  author =       {M. W. Mahoney},
+  title =        {Seminar at Simons Institute},
+  year =         {September 2018},
+  note =         {\url{https://simons.berkeley.edu/talks/9-24-mahoney-deep-learning}},
 }
-@MISC{distiller_repo,
-  note =         {\texttt{https://github.com/NervanaSystems/distiller}},
+
+@MISC{talk_charles_icsi_2018,
+  author =       {C. H. Martin},
+  title =        {Seminar at ICSI},
+  year =         {December 2018},
+  note =         {\url{https://www.youtube.com/watch?v=6Zgul4oygMc}},
+}
+
+@MISC{talk_charles_lbl_2018,
+  author =       {C. H. Martin},
+  title =        {Seminar at LBNL},
+  year =         {June 2018},
+  note =         {\url{https://www.youtube.com/watch?v=_Ni5UDrVwYU}},
+}
+
+@MISC{ImplicitSelfRegularization_repo,
+  title =        {{ImplicitSelfRegularization}},
+  year =         {2018},
+  note =         {\url{https://github.com/CalculatedContent/ImplicitSelfRegularization}},
+}
+
+@MISC{PredictingTestAccuracies_repo,
+  title =        {{PredictingTestAccuracies}},
+  year =         {2019},
+  note =         {\url{https://github.com/CalculatedContent/PredictingTestAccuracies}},
+}
+
+@MISC{weightwatcher_pagkage,
+  title =        {{WeightWatcher}},
+  year =         {2018},
+  note =         {\url{https://pypi.org/project/WeightWatcher/}},
 }
 
 @TECHREPORT{AS17emergence_TR,
@@ -1977,7 +2011,7 @@
   year =         {1996},
   volume =       {25},
   number =       {2},
-  pages =        {195–236},
+  pages =        {195--236},
 }
 
 @ARTICLE{HN17,
@@ -3013,8 +3047,7 @@
   title =        {Traditional and Heavy-Tailed Self Regularization in Neural Network Models},
   booktitle =    {Proceedings of the 36st International Conference on Machine Learning},
   year =         {2019},
-  editor =       {},
-  pages =        {}, 
+  pages =        {},
 }
 
 @TECHREPORT{MM19a_TR,
@@ -3970,7 +4003,7 @@
 }
 
 @ARTICLE{SST92,
-  author =       {H. S. Seung and H. Sompolinsky and and N. Tishby},
+  author =       {H. S. Seung and H. Sompolinsky and N. Tishby},
   title =        {Statistical mechanics of learning from examples},
   journal =      {Physical Review A},
   year =         {1992},
