--- a/ICMLPhysicsWorkshop/prl_body.tex
+++ b/ICMLPhysicsWorkshop/prl_body.tex
@@ -135,7 +135,7 @@ Specifically, when $\alpha$ is very small, we can relate $\alpha$ to the more fa
 \mathcal{R}^{log}_{s}:=\dfrac{\log\Vert\mathbf{W}\Vert^{2}_{F}}{\log\lambda^{max}}  \approx \alpha  .
 \vspace{-1mm}
 \end{equation}
-Using this, one could implement our capacity metric as a regularizer to improve DNN training by implementing a Stable Rank regularizer (similar to how Spectral/Frobenius norm regularization is often implemented).  %~\cite{XXX-XXX-WHAT-IS-BEST-REF}.
+Using this, a promising direction is to implement our capacity metric as a regularizer to improve DNN training by implementing a Stable Rank regularizer (similar to how Spectral/Frobenius norm regularization is often implemented).  %~\cite{XXX-XXX-WHAT-IS-BEST-REF}.
 
 
 \vspace{-3mm}
