--- a/test_accuracy_paper/dnns.bib
+++ b/test_accuracy_paper/dnns.bib
@@ -1,6 +1,47 @@
+@MISC{talk_michael_acmsfsig_2019,
+  author =       {M. W. Mahoney},
+  title =        {Seminar at ACM SF-SIG},
+  year =         {February 2019},
+  note =         {\url{https://www.youtube.com/watch?v=2qF8TezRwS0}},
+}
+
+@MISC{talk_michael_simons_2018,
+  author =       {M. W. Mahoney},
+  title =        {Seminar at Simons Institute},
+  year =         {September 2018},
+  note =         {\url{https://simons.berkeley.edu/talks/9-24-mahoney-deep-learning}},
+}
+
+@MISC{talk_charles_icsi_2018,
+  author =       {C. H. Martin},
+  title =        {Seminar at ICSI},
+  year =         {December 2018},
+  note =         {\url{https://www.youtube.com/watch?v=6Zgul4oygMc}},
+}
+
+@MISC{talk_charles_lbl_2018,
+  author =       {C. H. Martin},
+  title =        {Seminar at LBNL},
+  year =         {June 2018},
+  note =         {\url{https://www.youtube.com/watch?v=_Ni5UDrVwYU}},
+}
+
+@MISC{ImplicitSelfRegularization_repo,
+  title =        {{ImplicitSelfRegularization}},
+  year =         {2018},
+  note =         {\url{https://github.com/CalculatedContent/ImplicitSelfRegularization}},
+}
+
+@MISC{PredictingTestAccuracies_repo,
+  title =        {{PredictingTestAccuracies}},
+  year =         {2019},
+  note =         {\url{https://github.com/CalculatedContent/PredictingTestAccuracies}},
+}
+
 @MISC{weightwatcher_pagkage,
   title =        {{WeightWatcher}},
-  note =         {\texttt{https://pypi.org/project/WeightWatcher/}},
+  year =         {2018},
+  note =         {\url{https://pypi.org/project/WeightWatcher/}},
 }
 
 @TECHREPORT{AS17emergence_TR,
@@ -412,6 +453,16 @@
    volume  = {113},
    number  = {48},
    pages   = {E7655--E7662},
+}
+
+@Article{energy_landscape_wales17,
+   author  = "A. J. Ballard and R. Das and S. Martiniani and D. Mehta and L. Sagun and J. D. Stevenson and D. J. Wales",
+   title   = "Energy landscapes for machine learning",
+   journal = "Physical Chemistry Chemical Physics",
+   year    = "2017",
+   volume  = "19",
+   issue   = "20",
+   pages   = "12585-12603",
 }
 
 @ARTICLE{BFMY12,
@@ -1056,6 +1107,13 @@
   year =      {2018},
 }
 
+@TECHREPORT{CWZZ17_TR,
+  author =    {Y. Cheng and D. Wang and P. Zhou and T. Zhang},
+  title =     {A Survey of Model Compression and Acceleration for Deep Neural Networks},
+  number =    {Preprint: arXiv:1710.09282},
+  year =      {2017},
+}
+
 @TECHREPORT{CTWG16_TR,
   author =    {S. Cherla and S. N. Tran and T. Weyde and A. d'Avila Garcez},
   title =     {Generalizing the Discriminative Restricted {B}oltzmann Machine},
@@ -1533,6 +1591,16 @@
   year =      {2017},
 }
 
+@ARTICLE{FIBX12,
+  author =       {N. Friedman and S. Ito and B. A. W. Brinkman and M. Shimono and R. E. L. DeVille and K. A. Dahmen and J. M. Beggs and T. C. Butler},
+  title =        {Universal Critical Dynamics in High Resolution Neuronal Avalanche Data},
+  journal =      {Phys. Rev. Lett.},
+  year =         {2012},
+  volume =       {108},
+  number =       {20},
+  pages =        {208102},
+}
+
 @ARTICLE{Fu02,
   author =       {M. C. Fu},
   title =        {Optimization for simulation: Theory vs. Practice},
@@ -1943,7 +2011,7 @@
   year =         {1996},
   volume =       {25},
   number =       {2},
-  pages =        {195–236},
+  pages =        {195--236},
 }
 
 @ARTICLE{HN17,
@@ -2947,6 +3015,13 @@
   year =      {2017},
 }
 
+@TECHREPORT{MM17_TR_v1,
+  author =    {C. H. Martin and M. W. Mahoney},
+  title =     {Rethinking generalization requires revisiting old ideas: statistical mechanics approaches and complex learning behavior},
+  number =    {Preprint: arXiv:1710.09553v1},
+  year =      {2017},
+}
+
 @TECHREPORT{MM18_TR,
   author =    {C. H. Martin and M. W. Mahoney},
   title =     {Implicit Self-Regularization in Deep Neural Networks: Evidence from Random Matrix Theory and Implications for Learning},
@@ -2963,14 +3038,22 @@
 @TECHREPORT{MM19_shortTR_of_longTR,
   author =    {C. H. Martin and M. W. Mahoney},
   title =     {Traditional and Heavy-Tailed Self Regularization in Neural Network Models},
-  number =    {Preprint: arXiv:},
+  number =    {Preprint: arXiv:1901.08276},
   year =      {2019},
+}
+
+@INPROCEEDINGS{MM19_HTSR_ICML,
+  author =       {C. H. Martin and M. W. Mahoney},
+  title =        {Traditional and Heavy-Tailed Self Regularization in Neural Network Models},
+  booktitle =    {Proceedings of the 36st International Conference on Machine Learning},
+  year =         {2019},
+  pages =        {},
 }
 
 @TECHREPORT{MM19a_TR,
   author =    {C. H. Martin and M. W. Mahoney},
   title =     {Heavy-Tailed {U}niversality Predicts Trends in Test Accuracies for Very Large Pre-Trained Deep Neural Networks},
-  number =    {Preprint: arXiv:},
+  number =    {Preprint: arXiv:1901.08278},
   year =      {2019},
 }
 
@@ -3920,7 +4003,7 @@
 }
 
 @ARTICLE{SST92,
-  author =       {H. S. Seung and H. Sompolinsky and and N. Tishby},
+  author =       {H. S. Seung and H. Sompolinsky and N. Tishby},
   title =        {Statistical mechanics of learning from examples},
   journal =      {Physical Review A},
   year =         {1992},
@@ -3961,6 +4044,13 @@
    volume  = {411},
    number  = {29--30},
    pages   = {2696--2711},
+}
+
+@TECHREPORT{SLAx18_TR,
+  author =       {C. J. Shallue and J. Lee and J. Antognini and J. Sohl-Dickstein and R. Frostig and G. E. Dahl}, 
+  title =        {Measuring the Effects of Data Parallelism on Neural Network Training},
+  note =         {Preprint: arXiv:1811.03600},
+  year =         {2018},
 }
 
 @INCOLLECTION{She14,
@@ -4600,6 +4690,26 @@
   pages =        {1429--1451},
 }
 
+@ARTICLE{wolynes_proteins_95,
+  author =       {J. D. Bryngelson and J. N. Onuchic and N. D. Socci and P. G. Wolynes},
+  title =        {Funnels, pathways, and the energy landscape of protein folding: a synthesis},
+  journal =      {Proteins: Structure, Function, and Bioinformatics},
+  year =         {1995},
+  volume =       {21}
+  number =       {3},
+  pages =        {167--195},
+}
+
+@ARTICLE{wolynes_arpc_97,
+  author =       {J. N. Onuchic and Z. Luthey-Schulten and P. G. Wolynes},
+  title =        {Theory of protein folding: the energy landscape perspective},
+  journal =      {Annual review of physical chemistry},
+  year =         {1997},
+  volume =       {48},
+  number =       {1},
+  pages =        {545--600},
+}
+
 @INPROCEEDINGS{Won97,
   author =       {K. Y. M. Wong},
   title =        {Microscopic equations in rough energy landscape for neural networks},
@@ -4661,6 +4771,20 @@
   author =       {Z. Yao and A. Gholami and K. Keutzer and M. W. Mahoney},
   title =        {Large batch size training of neural networks with adversarial training and second-order information},
   note =         {Preprint: arXiv:1810.01021},
+  year =         {2018},
+}
+
+@TECHREPORT{GVYx18_TR,
+  author =       {N. Golmant and N. Vemuri and Z. Yao and V. Feinberg and A. Gholami and K. Rothauge and M. W. Mahoney and J. Gonzalez},
+  title =        {On the Computational Inefficiency of Large Batch Sizes for Stochastic Gradient Descent},
+  note =         {Preprint: arXiv:1811.12941},
+  year =         {2018},
+}
+
+@TECHREPORT{YGXKM18_TR,
+  author =       {Z. Yao and A. Gholami and P. Xu and K. Keutzer and M. W. Mahoney},
+  title =        {Trust Region Based Adversarial Attack on Neural Networks},
+  note =         {Preprint: arXiv:1812.06371},
   year =         {2018},
 }
 
