--- a/test_accuracy_paper/nips_test_accuracy.tex
+++ b/test_accuracy_paper/nips_test_accuracy.tex
@@ -89,6 +89,7 @@
 \input{nips_test_accuracy_empirical}
 \input{nips_test_accuracy_discussion}
 
+\newpage
 \bibliographystyle{unsrt}
 %\bibliographystyle{plain}
 
@@ -99,6 +100,8 @@
 }
 
 \appendix
+\newpage
+\input{nips_test_accuracy_theory1}
 \input{nips_test_accuracy_appendix}
 
 \end{document}
